src/parser.ts
// 0x Parser — Recursive Descent Parser

import { tokenize, Token, TokenType } from './tokenizer.js';
import { suggestKeyword, COMMON_MISTAKES } from './generators/shared.js';
import type {
  ASTNode, PageNode, ComponentNode, AppNode,
  StateDecl, DerivedDecl, PropDecl, TypeDecl, StoreDecl, ApiDecl,
  FnDecl, Param, OnMount, OnDestroy, WatchBlock, CheckDecl,
  LayoutNode, TextNode, ButtonNode, InputNode, ImageNode, LinkNode,
  ToggleNode, SelectNode, IfBlock, ForBlock, ShowBlock, HideBlock,
  StyleDecl, StyleProperty, ComponentCall, CommentNode,
  JsImport, UseImport, JsBlock, RawBlock, TopLevelVarDecl,
  ModelNode, ModelField, DataDecl, FormDecl, FormField, FormValidation, FormSubmit,
  TableNode, TableColumn,
  AuthDecl, ChartNode, StatNode, RealtimeDecl, RouteDecl, NavNode, NavItem,
  UploadNode, ModalNode, ToastNode,
  RoleDecl, CrudNode, ListNode, LayoutShellNode, SlideOverNode, DrawerNode,
  CommandNode, ConfirmNode, PayNode, CartNode, MediaNode, NotificationNode,
  SearchNode, FilterNode, SocialNode, ProfileNode,
  HeroNode, FeaturesNode, PricingNode, FaqNode, TestimonialNode, FooterNode,
  AdminNode, SeoNode, A11yNode, AnimateNode, GestureNode, AiNode,
  AutomationNode, DevNode, EmitNode, ResponsiveNode, BreadcrumbNode, StatsGridNode, DividerNode, ProgressNode,
  // Phase 4
  DeployNode, EnvNode, DockerNode, CiNode, DomainNode, CdnNode, MonitorNode, BackupNode,
  EndpointNode, MiddlewareNode, QueueNode, CronNode, CacheNode, MigrateNode, SeedNode, WebhookNode, StorageNode,
  TestNode, E2eNode, MockNode, FixtureNode,
  ErrorNode, LoadingNode, OfflineNode, RetryNode, LogNode,
  I18nNode, LocaleNode, RtlNode, ThemeDecl,
  TypeExpr, Expression, Statement, UINode, SourceLocation,
} from './ast.js';

export class ParseError extends Error {
  constructor(message: string, public line: number, public column: number, context?: string) {
    const ctx = context ? ` (near: ${context})` : '';
    super(`Line ${line}, Col ${column}: ${message}${ctx}`);
    this.name = 'ParseError';
  }
}

class Parser {
  private tokens: Token[];
  private pos: number = 0;
  private sourceLines: string[];

  /** Returns nearby tokens as context string for error messages */
  private nearby(): string {
    const start = Math.max(0, this.pos - 2);
    const end = Math.min(this.tokens.length, this.pos + 3);
    return this.tokens.slice(start, end)
      .filter(t => t.type !== 'NEWLINE' && t.type !== 'INDENT' && t.type !== 'DEDENT')
      .map(t => t.value || t.type)
      .join(' ');
  }

  constructor(tokens: Token[], source: string = '') {
    // Filter out comments for storage, but keep them for potential AST inclusion
    this.tokens = tokens;
    this.sourceLines = source.split('\n');
  }

  // ── Utilities ─────────────────────────────────────────

  private current(): Token {
    return this.tokens[this.pos];
  }

  private peek(offset: number = 0): Token {
    const idx = this.pos + offset;
    if (idx >= this.tokens.length) return this.tokens[this.tokens.length - 1];
    return this.tokens[idx];
  }

  private advance(): Token {
    const tok = this.tokens[this.pos];
    this.pos++;
    return tok;
  }

  private expect(type: TokenType, value?: string): Token {
    const tok = this.current();
    if (tok.type !== type || (value !== undefined && tok.value !== value)) {
      let hint = '';
      if (tok.type === 'IDENTIFIER' && COMMON_MISTAKES[tok.value]) {
        hint = `\n  → Hint: ${COMMON_MISTAKES[tok.value]}`;
      }
      throw new ParseError(
        `Expected ${type}${value ? ` '${value}'` : ''}, got ${tok.type} '${tok.value}'${hint}`,
        tok.line, tok.column, this.nearby()
      );
    }
    return this.advance();
  }

  private match(type: TokenType, value?: string): boolean {
    const tok = this.current();
    return tok.type === type && (value === undefined || tok.value === value);
  }

  private matchAndAdvance(type: TokenType, value?: string): Token | null {
    if (this.match(type, value)) {
      return this.advance();
    }
    return null;
  }

  private skipNewlines(): void {
    while (this.match('NEWLINE')) this.advance();
  }

  private loc(): SourceLocation {
    const tok = this.current();
    return { line: tok.line, column: tok.column };
  }

  // Accept IDENTIFIER or KEYWORD as a name (keywords like 'input' can be variable names)
  private expectName(): string {
    const tok = this.current();
    if (tok.type === 'IDENTIFIER' || tok.type === 'KEYWORD') {
      this.advance();
      return tok.value;
    }
    throw new ParseError(`Expected name, got ${tok.type} '${tok.value}'`, tok.line, tok.column, this.nearby());
  }

  // ── Top Level ─────────────────────────────────────────

  parseProgram(): ASTNode[] {
    const nodes: ASTNode[] = [];
    this.skipNewlines();

    while (!this.match('EOF')) {
      if (this.match('NEWLINE')) { this.advance(); continue; }
      if (this.match('DEDENT')) { this.advance(); continue; }
      if (this.match('COMMENT')) { this.advance(); this.skipNewlines(); continue; }

      if (this.match('KEYWORD', 'page')) {
        nodes.push(this.parsePage());
      } else if (this.match('KEYWORD', 'component')) {
        nodes.push(this.parseComponent());
      } else if (this.match('KEYWORD', 'app')) {
        nodes.push(this.parseApp());
      } else if (this.match('KEYWORD', 'model')) {
        nodes.push(this.parseModel());
      } else if (this.match('KEYWORD', 'auth')) {
        nodes.push(this.parseAuth());
      } else if (this.match('KEYWORD', 'route')) {
        nodes.push(this.parseRoute());
      } else if (this.match('KEYWORD', 'roles')) {
        nodes.push(this.parseRoles());
      } else if (this.match('KEYWORD', 'automation')) {
        nodes.push(this.parseAutomation());
      } else if (this.match('KEYWORD', 'dev')) {
        nodes.push(this.parseDev());
      // Phase 4: Infrastructure top-level
      } else if (this.match('KEYWORD', 'deploy')) {
        nodes.push(this.parseDeploy());
      } else if (this.match('KEYWORD', 'env')) {
        nodes.push(this.parseEnv());
      } else if (this.match('KEYWORD', 'docker')) {
        nodes.push(this.parseDocker());
      } else if (this.match('KEYWORD', 'ci')) {
        nodes.push(this.parseCi());
      } else if (this.match('KEYWORD', 'domain')) {
        nodes.push(this.parseDomain());
      } else if (this.match('KEYWORD', 'cdn')) {
        nodes.push(this.parseCdn());
      } else if (this.match('KEYWORD', 'monitor')) {
        nodes.push(this.parseMonitor());
      } else if (this.match('KEYWORD', 'backup')) {
        nodes.push(this.parseBackup());
      // Phase 4: Backend top-level
      } else if (this.match('KEYWORD', 'endpoint')) {
        nodes.push(this.parseEndpoint());
      } else if (this.match('KEYWORD', 'middleware')) {
        nodes.push(this.parseMiddleware());
      } else if (this.match('KEYWORD', 'queue')) {
        nodes.push(this.parseQueue());
      } else if (this.match('KEYWORD', 'cron')) {
        nodes.push(this.parseCron());
      } else if (this.match('KEYWORD', 'cache')) {
        nodes.push(this.parseCache());
      } else if (this.match('KEYWORD', 'migrate')) {
        nodes.push(this.parseMigrate());
      } else if (this.match('KEYWORD', 'seed')) {
        nodes.push(this.parseSeed());
      } else if (this.match('KEYWORD', 'webhook')) {
        nodes.push(this.parseWebhook());
      } else if (this.match('KEYWORD', 'storage')) {
        nodes.push(this.parseStorage());
      // Phase 4: Testing top-level
      } else if (this.match('KEYWORD', 'test')) {
        nodes.push(this.parseTest());
      } else if (this.match('KEYWORD', 'e2e')) {
        nodes.push(this.parseE2e());
      } else if (this.match('KEYWORD', 'mock')) {
        nodes.push(this.parseMock());
      } else if (this.match('KEYWORD', 'fixture')) {
        nodes.push(this.parseFixture());
      // Phase 4: i18n top-level
      } else if (this.match('KEYWORD', 'i18n')) {
        nodes.push(this.parseI18n());
      } else if (this.match('KEYWORD', 'locale')) {
        nodes.push(this.parseLocale());
      } else if (this.match('KEYWORD', 'rtl')) {
        nodes.push(this.parseRtl());
      } else if (this.match('KEYWORD', 'theme')) {
        nodes.push(this.parseTheme());
      } else {
        const tok = this.current();
        let hint = '';
        if (COMMON_MISTAKES[tok.value]) {
          hint = `\n  → Hint: ${COMMON_MISTAKES[tok.value]}`;
        } else {
          const topKeywords = [
            'page', 'component', 'app', 'model', 'auth', 'route', 'roles', 'automation', 'dev',
            'deploy', 'env', 'docker', 'ci', 'domain', 'cdn', 'monitor', 'backup',
            'endpoint', 'middleware', 'queue', 'cron', 'cache', 'migrate', 'seed', 'webhook', 'storage',
            'test', 'e2e', 'mock', 'fixture', 'i18n', 'locale', 'rtl', 'theme',
          ];
          const suggestion = suggestKeyword(tok.value, topKeywords);
          if (suggestion) hint = `\n  → Did you mean '${suggestion}'?`;
        }
        throw new ParseError(
          `Expected top-level keyword (page, component, app, etc.), got '${tok.value}'${hint}`,
          tok.line, tok.column, this.nearby()
        );
      }
      this.skipNewlines();
    }

    return nodes;
  }

  private parsePage(): PageNode {
    const location = this.loc();
    this.expect('KEYWORD', 'page');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    this.skipNewlines();
    const body = this.parseBlock();
    return { type: 'Page', name, body, loc: location };
  }

  private parseComponent(): ComponentNode {
    const location = this.loc();
    this.expect('KEYWORD', 'component');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    this.skipNewlines();
    const body = this.parseBlock();
    return { type: 'Component', name, body, loc: location };
  }

  private parseApp(): AppNode {
    const location = this.loc();
    this.expect('KEYWORD', 'app');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    this.skipNewlines();
    const body = this.parseBlock();
    return { type: 'App', name, body, loc: location };
  }

  // ── Block ─────────────────────────────────────────────

  private parseBlock(): ASTNode[] {
    const items: ASTNode[] = [];
    if (!this.match('INDENT')) return items;
    this.advance(); // consume INDENT
    this.skipNewlines();

    while (!this.match('DEDENT') && !this.match('EOF')) {
      if (this.match('NEWLINE')) { this.advance(); continue; }
      if (this.match('COMMENT')) {
        const tok = this.advance();
        items.push({ type: 'Comment', text: tok.value, loc: { line: tok.line, column: tok.column } } as CommentNode);
        this.skipNewlines();
        continue;
      }
      const node = this.parseBodyItem();
      if (node) items.push(node);
      this.skipNewlines();
    }

    if (this.match('DEDENT')) this.advance();
    return items;
  }

  private parseUIBlock(): UINode[] {
    const items: UINode[] = [];
    if (!this.match('INDENT')) return items;
    this.advance();
    this.skipNewlines();

    while (!this.match('DEDENT') && !this.match('EOF')) {
      if (this.match('NEWLINE')) { this.advance(); continue; }
      if (this.match('COMMENT')) {
        const tok = this.advance();
        items.push({ type: 'Comment', text: tok.value, loc: { line: tok.line, column: tok.column } } as CommentNode);
        this.skipNewlines();
        continue;
      }
      const node = this.parseUIElement();
      if (node) items.push(node);
      this.skipNewlines();
    }

    if (this.match('DEDENT')) this.advance();
    return items;
  }

  // ── Body Items ────────────────────────────────────────

  private parseBodyItem(): ASTNode {
    const tok = this.current();

    if (tok.type === 'KEYWORD') {
      switch (tok.value) {
        case 'state': return this.parseState();
        case 'derived': return this.parseDerived();
        case 'prop': return this.parseProp();
        case 'type': return this.parseType();
        case 'store': return this.parseStore();
        case 'api': return this.parseApi();
        case 'fn': return this.parseFn(false);
        case 'async': return this.parseFn(true);
        case 'on': return this.parseOn();
        case 'watch': return this.parseWatch();
        case 'check': return this.parseCheck();
        case 'style': return this.parseStyle();
        case 'js': return this.parseJsInterop();
        case 'raw': return this.parseRawBlock();
        case 'import': return this.parseJsImport(this.loc());
        case 'use': return this.parseUseImport();
        case 'const':
        case 'let': return this.parseTopLevelVar();
        // Phase 1 advanced
        case 'data': return this.parseData();
        case 'form': return this.parseForm();
        // Phase 2 advanced
        case 'realtime': return this.parseRealtime();
        case 'emit': return this.parseEmit();
        // Phase 4: error/loading/offline/retry/log in body context
        case 'error': return this.parseError();
        case 'loading': return this.parseLoading();
        case 'offline': return this.parseOffline();
        case 'retry': return this.parseRetry();
        case 'log': return this.parseLog();
        // UI elements — fall through to shared UI dispatch
        default: {
          const uiNode = this.tryParseUIKeyword(tok.value);
          if (uiNode) return uiNode;
        }
      }
    }

    let hint = '';
    if (COMMON_MISTAKES[tok.value]) {
      hint = `\n  → Hint: ${COMMON_MISTAKES[tok.value]}`;
    } else {
      const bodyKeywords = [
        'state', 'derived', 'prop', 'type', 'store', 'api', 'fn', 'async', 'on', 'watch', 'check',
        'style', 'js', 'raw', 'import', 'use', 'const', 'let', 'data', 'form', 'realtime', 'emit',
        'error', 'loading', 'offline', 'retry', 'log',
        'layout', 'text', 'button', 'input', 'image', 'link', 'toggle', 'select',
        'if', 'for', 'show', 'hide', 'table', 'chart', 'stat', 'nav', 'upload', 'modal',
        'toast', 'crud', 'list', 'drawer', 'command', 'confirm', 'pay', 'cart', 'media',
        'notification', 'search', 'filter', 'social', 'profile', 'hero', 'features',
        'pricing', 'faq', 'testimonials', 'footer', 'admin', 'seo', 'a11y', 'animate',
        'gesture', 'ai', 'breadcrumb', 'responsive', 'divider', 'progress',
      ];
      const suggestion = suggestKeyword(tok.value, bodyKeywords);
      if (suggestion) hint = `\n  → Did you mean '${suggestion}'?`;
    }
    throw new ParseError(`Unexpected token '${tok.value}'${hint}`, tok.line, tok.column, this.nearby());
  }

  private tryParseUIKeyword(value: string): UINode | null {
    switch (value) {
      case 'layout': return this.parseLayout();
      case 'text': return this.parseText();
      case 'button': return this.parseButton();
      case 'input': return this.parseInput();
      case 'image': return this.parseImage();
      case 'link': return this.parseLink();
      case 'toggle': return this.parseToggle();
      case 'select': return this.parseSelect();
      case 'if': return this.parseIf();
      case 'for': return this.parseFor();
      case 'show': return this.parseShow();
      case 'hide': return this.parseHide();
      case 'component': return this.parseComponentCall();
      case 'raw': return this.parseRawBlock();
      case 'table': return this.parseTable();
      case 'chart': return this.parseChart();
      case 'stat': return this.parseStat();
      case 'stats': return this.parseStatsGrid();
      case 'nav': return this.parseNav();
      case 'upload': return this.parseUpload();
      case 'modal': return this.parseModal();
      case 'toast': return this.parseToast();
      case 'crud': return this.parseCrud();
      case 'list': return this.parseList();
      case 'drawer': return this.parseDrawer();
      case 'command': return this.parseCommand();
      case 'confirm': return this.parseConfirm();
      case 'pay': return this.parsePay();
      case 'cart': return this.parseCart();
      case 'media': return this.parseMedia();
      case 'gallery': return this.parseMedia();
      case 'notification': return this.parseNotification();
      case 'search': return this.parseSearch();
      case 'filter': return this.parseFilter();
      case 'social': return this.parseSocial();
      case 'profile': return this.parseProfile();
      case 'hero': return this.parseHero();
      case 'features': return this.parseFeatures();
      case 'pricing': return this.parsePricing();
      case 'faq': return this.parseFaq();
      case 'testimonials': return this.parseTestimonials();
      case 'footer': return this.parseFooter();
      case 'admin': return this.parseAdmin();
      case 'seo': return this.parseSeo();
      case 'a11y': return this.parseA11y();
      case 'animate': return this.parseAnimate();
      case 'gesture': return this.parseGesture();
      case 'ai': return this.parseAi();
      case 'breadcrumb': return this.parseBreadcrumb();
      case 'responsive': return this.parseResponsive();
      case 'mobile': return this.parseResponsive();
      case 'divider': return this.parseDivider();
      case 'progress': return this.parseProgress();
      default: return null;
    }
  }

  private parseUIElement(): UINode {
    const tok = this.current();
    if (tok.type === 'KEYWORD') {
      const uiNode = this.tryParseUIKeyword(tok.value);
      if (uiNode) return uiNode;
    }
    let hint = '';
    if (COMMON_MISTAKES[tok.value]) {
      hint = `\n  → Hint: ${COMMON_MISTAKES[tok.value]}`;
    } else {
      const uiKeywords = [
        'layout', 'text', 'button', 'input', 'image', 'link', 'toggle', 'select',
        'if', 'for', 'show', 'hide', 'table', 'chart', 'stat', 'nav', 'upload', 'modal',
        'toast', 'list', 'drawer', 'animate', 'breadcrumb', 'divider', 'progress', 'raw', 'component',
      ];
      const suggestion = suggestKeyword(tok.value, uiKeywords);
      if (suggestion) hint = `\n  → Did you mean '${suggestion}'?`;
    }
    throw new ParseError(`Expected UI element, got '${tok.value}'${hint}`, tok.line, tok.column, this.nearby());
  }

  // ── Declarations ──────────────────────────────────────

  private parseState(): StateDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'state');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    const valueType = this.parseTypeExpr();
    this.expect('OPERATOR', '=');
    const initial = this.parseExpression();
    return { type: 'StateDecl', name, valueType, initial, loc: location };
  }

  private parseDerived(): DerivedDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'derived');
    const name = this.expectName();
    this.expect('OPERATOR', '=');
    const expression = this.parseExpression();
    return { type: 'DerivedDecl', name, expression, loc: location };
  }

  private parseProp(): PropDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'prop');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    const valueType = this.parseTypeExpr();
    let defaultValue: Expression | null = null;
    if (this.match('OPERATOR', '=')) {
      this.advance();
      defaultValue = this.parseExpression();
    }
    return { type: 'PropDecl', name, valueType, defaultValue, loc: location };
  }

  private parseType(): TypeDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'type');
    const name = this.expectName();
    this.expect('OPERATOR', '=');

    // Check if it's a union type: "val1" | "val2" ...
    if (this.match('STRING')) {
      const members: string[] = [];
      members.push(this.advance().value);
      while (this.match('OPERATOR', '|')) {
        this.advance();
        members.push(this.expect('STRING').value);
      }
      if (members.length > 1) {
        return { type: 'TypeDecl', name, definition: { kind: 'union', members }, loc: location };
      }
      // Single string — treat as union with 1 member
      return { type: 'TypeDecl', name, definition: { kind: 'union', members }, loc: location };
    }

    // Object type: { field: type, ... }
    if (this.match('PUNCTUATION', '{')) {
      const definition = this.parseObjectType();
      return { type: 'TypeDecl', name, definition, loc: location };
    }

    // Named or other type
    const definition = this.parseTypeExpr();
    return { type: 'TypeDecl', name, definition, loc: location };
  }

  private parseStore(): StoreDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'store');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    const valueType = this.parseTypeExpr();
    this.expect('OPERATOR', '=');
    const initial = this.parseExpression();
    return { type: 'StoreDecl', name, valueType, initial, loc: location };
  }

  private parseApi(): ApiDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'api');
    const name = this.expectName();
    this.expect('OPERATOR', '=');
    const method = this.expect('HTTP_METHOD').value as ApiDecl['method'];
    const url = this.expect('STRING').value;
    return { type: 'ApiDecl', name, method, url, loc: location };
  }

  // ── Functions ─────────────────────────────────────────

  private parseFn(isAsync: boolean): FnDecl {
    const location = this.loc();
    if (isAsync) {
      this.expect('KEYWORD', 'async');
    }
    this.expect('KEYWORD', 'fn');
    const name = this.expectName();
    this.expect('PUNCTUATION', '(');
    const params = this.parseParams();
    this.expect('PUNCTUATION', ')');
    this.expect('PUNCTUATION', ':');
    this.skipNewlines();

    // Parse function body block
    const requires: Expression[] = [];
    const ensures: Expression[] = [];
    const body: Statement[] = [];

    if (this.match('INDENT')) {
      this.advance();
      this.skipNewlines();

      while (!this.match('DEDENT') && !this.match('EOF')) {
        if (this.match('NEWLINE')) { this.advance(); continue; }

        if (this.match('KEYWORD', 'requires')) {
          this.advance();
          this.expect('PUNCTUATION', ':');
          requires.push(this.parseExpression());
          this.skipNewlines();
          continue;
        }
        if (this.match('KEYWORD', 'ensures')) {
          this.advance();
          this.expect('PUNCTUATION', ':');
          ensures.push(this.parseExpression());
          this.skipNewlines();
          continue;
        }

        body.push(this.parseStatement());
        this.skipNewlines();
      }
      if (this.match('DEDENT')) this.advance();
    }

    return { type: 'FnDecl', name, params, body, isAsync, requires, ensures, loc: location };
  }

  private parseParams(): Param[] {
    const params: Param[] = [];
    if (this.match('PUNCTUATION', ')')) return params;

    params.push(this.parseParam());
    while (this.match('PUNCTUATION', ',')) {
      this.advance();
      params.push(this.parseParam());
    }
    return params;
  }

  private parseParam(): Param {
    const name = this.expectName();
    let paramType: TypeExpr | null = null;
    let defaultValue: Expression | null = null;

    if (this.match('PUNCTUATION', ':')) {
      this.advance();
      paramType = this.parseTypeExpr();
    }
    if (this.match('OPERATOR', '=')) {
      this.advance();
      defaultValue = this.parseExpression();
    }
    return { name, paramType, defaultValue };
  }

  // ── Lifecycle ─────────────────────────────────────────

  private parseOn(): OnMount | OnDestroy {
    const location = this.loc();
    this.expect('KEYWORD', 'on');
    const kind = this.current().value;
    if (kind === 'mount') {
      this.advance();
      this.expect('PUNCTUATION', ':');
      this.skipNewlines();
      const body = this.parseStatementBlock();
      return { type: 'OnMount', body, loc: location };
    } else if (kind === 'destroy') {
      this.advance();
      this.expect('PUNCTUATION', ':');
      this.skipNewlines();
      const body = this.parseStatementBlock();
      return { type: 'OnDestroy', body, loc: location };
    }
    throw new ParseError(`Expected 'mount' or 'destroy' after 'on', got '${kind}'`, this.current().line, this.current().column, this.nearby());
  }

  private parseWatch(): WatchBlock {
    const location = this.loc();
    this.expect('KEYWORD', 'watch');

    // Support multi-variable watch: watch a, b, c: or watch (a, b, c):
    const variables: string[] = [];
    const hasParen = this.match('PUNCTUATION', '(');
    if (hasParen) this.advance();

    variables.push(this.expectName());
    while (this.match('PUNCTUATION', ',')) {
      this.advance();
      variables.push(this.expectName());
    }

    if (hasParen) this.expect('PUNCTUATION', ')');

    this.expect('PUNCTUATION', ':');
    this.skipNewlines();
    const body = this.parseStatementBlock();
    return { type: 'WatchBlock', variable: variables[0], variables, body, loc: location };
  }

  private parseTopLevelVar(): TopLevelVarDecl {
    const location = this.loc();
    const keyword = this.current().value as 'const' | 'let';
    this.advance(); // consume const/let
    const name = this.expectName();
    this.expect('OPERATOR', '=');
    const value = this.parseExpression();
    this.skipNewlines();
    return { type: 'TopLevelVarDecl', keyword, name, value, loc: location };
  }

  private parseStatementBlock(): Statement[] {
    const stmts: Statement[] = [];
    if (!this.match('INDENT')) return stmts;
    this.advance();
    this.skipNewlines();

    while (!this.match('DEDENT') && !this.match('EOF')) {
      if (this.match('NEWLINE')) { this.advance(); continue; }
      if (this.match('COMMENT')) { this.advance(); this.skipNewlines(); continue; }
      stmts.push(this.parseStatement());
      this.skipNewlines();
    }
    if (this.match('DEDENT')) this.advance();
    return stmts;
  }

  // ── Check ─────────────────────────────────────────────

  private parseCheck(): CheckDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'check');
    const condition = this.parseExpression();
    const message = this.expect('STRING').value;
    return { type: 'CheckDecl', condition, message, loc: location };
  }

  // ── Style ─────────────────────────────────────────────

  private parseStyle(): StyleDecl {
    const location = this.loc();
    this.expect('KEYWORD', 'style');
    const name = this.expectName();
    this.expect('PUNCTUATION', ':');
    this.skipNewlines();

    const properties: StyleProperty[] = [];
    if (this.match('INDENT')) {
      this.advance();
      this.skipNewlines();

      while (!this.match('DEDENT') && !this.match('EOF')) {
        if (this.match('NEWLINE')) { this.advance(); continue; }
        if (this.match('COMMENT')) { this.advance(); this.skipNewlines(); continue; }

        let responsive: string | null = null;
        if (this.match('AT_KEYWORD')) {
          responsive = '@' + this.advance().value;
          this.expect('PUNCTUATION', ':');
        }

        const propName = this.advance().value; // property name (could be KEYWORD or IDENTIFIER)
        this.expect('PUNCTUATION', ':');
        const value = this.parseExpression();
        properties.push({ name: propName, value, responsive });
        this.skipNewlines();
      }
      if (this.match('DEDENT')) this.advance();
    }

    return { type: 'StyleDecl', name, properties, loc: location };
  }

  // ── JS Interop ────────────────────────────────────────

  private parseJsInterop(): JsImport | JsBlock {
    const location = this.loc();
    this.expect('KEYWORD', 'js');

    if (this.match('KEYWORD', 'import')) {
      return this.parseJsImport(location);
    }

    // JS block: js { ... }
    if (this.match('PUNCTUATION', '{')) {
      this.advance();
      let code = '';
      let braceDepth = 1;
      while (braceDepth > 0 && !this.match('EOF')) {
        const tok = this.advance();
        if (tok.value === '{') braceDepth++;
        else if (tok.value === '}') {
          braceDepth--;
          if (braceDepth === 0) break;
        }
        code += tok.value + ' ';
      }
      return { type: 'JsBlock', code: code.trim(), loc: location };
    }

    // JS block: js: (indented block)
    if (this.match('PUNCTUATION', ':')) {
      this.advance();
      this.skipNewlines();
      let code = '';
      if (this.match('INDENT')) {
        this.advance();
        while (!this.match('DEDENT') && !this.match('EOF')) {
          if (this.match('NEWLINE')) { this.advance(); code += '\n'; continue; }
          const tok = this.advance();
          code += tok.value + ' ';
        }
        if (this.match('DEDENT')) this.advance();
      }
      return { type: 'JsBlock', code: code.trim(), loc: location };
    }

    throw new ParseError(`Expected 'import', '{', or ':' after 'js'`, this.current().line, this.current().column, this.nearby());
  }

  private parseRawBlock(): RawBlock {
    const location = this.loc();
    this.expect('KEYWORD', 'raw');

    // Raw block: raw { ... }
    if (this.match('PUNCTUATION', '{')) {
      const openBrace = this.tokens[this.pos];
      this.advance();
      let braceDepth = 1;
      while (braceDepth > 0 && !this.match('EOF')) {
        const tok = this.advance();
        if (tok.value === '{') braceDepth++;
        else if (tok.value === '}') {
          braceDepth--;
          if (braceDepth === 0) break;
        }
      }
      // Extract raw source between { and }
      const line = this.sourceLines[openBrace.line - 1] || '';
      const afterBrace = line.indexOf('{', openBrace.column);
      const closeBrace = line.lastIndexOf('}');
      const code = afterBrace >= 0 && closeBrace > afterBrace
        ? line.substring(afterBrace + 1, closeBrace).trim()
        : line.substring(openBrace.column + 1).trim();
      return { type: 'RawBlock', code, loc: location };
    }

    // Raw block: raw: (indented block)
    if (this.match('PUNCTUATION', ':')) {
      this.advance();
      this.skipNewlines();
      if (this.match('INDENT')) {
        this.advance();
        // Track line range of content tokens
        let minLine = Infinity;
        let maxLine = 0;
        while (!this.match('DEDENT') && !this.match('EOF')) {
          const tok = this.advance();
          if (tok.type !== 'NEWLINE' && tok.type !== 'INDENT' && tok.type !== 'DEDENT') {
            minLine = Math.min(minLine, tok.line);
            maxLine = Math.max(maxLine, tok.line);
          }
        }
        if (this.match('DEDENT')) this.advance();

        if (minLine <= maxLine) {
          const rawLines = this.sourceLines.slice(minLine - 1, maxLine);
          // Find base indentation from first line
          const baseIndent = rawLines[0]?.match(/^(\s*)/)?.[1]?.length ?? 0;
          const code = rawLines.map(l => l.slice(baseIndent)).join('\n').trim();
          return { type: 'RawBlock', code, loc: location };
        }
        return { type: 'RawBlock', code: '', loc: location };
      }
      return { type: 'RawBlock', code: '', loc: location };
    }

    throw new ParseError(`Expected '{' or ':' after 'raw'`, this.current().line, this.current().column, this.nearby());
  }

  private parseJsImport(location: SourceLocation): JsImport {
    this.expect('KEYWORD', 'import');
    const specifiers: string[] = [];
    let isDefault = false;

    if (this.match('PUNCTUATION', '{')) {
      this.advance();
      while (!this.match('PUNCTUATION', '}')) {
        specifiers.push(this.advance().value);
        if (this.match('PUNCTUATION', ',')) this.advance();
      }
      this.expect('PUNCTUATION', '}');
    } else {
      specifiers.push(this.advance().value);
      isDefault = true;
    }
